fixed a bunch of issues on ios

--- a/client/src/components/counter/Counter.css
+++ b/client/src/components/counter/Counter.css
@@ -1,6 +1,8 @@
-counter {
+.counter {
   display: flex;
   flex-direction: column;
+  text-align: center;
+  overflow: hidden;
 }
 
 .counter-value {
